--- a/overlay/packages/apps/Launcher/res/xml/default_workspace.xml
+++ b/overlay/packages/apps/Launcher/res/xml/default_workspace.xml
@@ -34,8 +34,8 @@
         launcher:y="3" />
 
      <favorite
-        launcher:packageName="com.cooliris.media"
-        launcher:className="com.cooliris.media.Gallery"
+        launcher:packageName="com.android.camera"
+        launcher:className="com.android.camera.GalleryPicker"
         launcher:screen="1"
         launcher:x="2"
         launcher:y="3" />
