--- a/overlay/packages/apps/ADWLauncher/res/xml/default_workspace.xml
+++ b/overlay/packages/apps/ADWLauncher/res/xml/default_workspace.xml
@@ -16,6 +16,24 @@
 
 <favorites xmlns:launcher="http://schemas.android.com/apk/res/com.android.launcher">
 
+    <!-- LAB -->
+    <favorite
+        launcher:packageName="com.android.contacts"
+        launcher:className="com.android.contacts.DialtactsActivity"
+        launcher:screen="-1"
+        launcher:x="-1"
+        launcher:y="-1"
+        launcher:container="-300" />
+
+    <!-- RAB -->
+    <favorite
+        launcher:packageName="com.android.browser"
+        launcher:className="com.android.browser.BrowserActivity"
+        launcher:screen="-1"
+        launcher:x="-1"
+        launcher:y="-1"
+        launcher:container="-400" />
+
     <!--  Left screen [1] -->
     <appwidget
         launcher:packageName="com.google.android.apps.genie.geniewidget"
@@ -34,37 +52,23 @@
         launcher:y="3" />
 
      <favorite
-        launcher:packageName="com.android.camera"
+        launcher:packageName="com.android.gallery"
         launcher:className="com.android.camera.GalleryPicker"
         launcher:screen="1"
         launcher:x="2"
         launcher:y="3" />
-        
+
     <!--  Middle screen [2] -->
     <search
         launcher:screen="2"
         launcher:x="0"
         launcher:y="0" />
 
-   <favorite
-        launcher:packageName="com.android.contacts"
-        launcher:className="com.android.contacts.DialtactsActivity"
-        launcher:screen="2"
-        launcher:x="0"
-        launcher:y="3" />
-
     <favorite
         launcher:packageName="com.android.contacts"
         launcher:className="com.android.contacts.DialtactsContactsEntryActivity"
         launcher:screen="2"
         launcher:x="1"
-        launcher:y="3" />
-
-    <favorite
-        launcher:packageName="com.android.browser"
-        launcher:className="com.android.browser.BrowserActivity"
-        launcher:screen="2"
-        launcher:x="2"
         launcher:y="3" />
 
     <favorite
@@ -79,14 +83,14 @@
         launcher:className="com.android.mms.ui.ConversationList"
         launcher:screen="2"
         launcher:x="0"
-        launcher:y="2" />
+        launcher:y="3" />
 
     <favorite
         launcher:packageName="com.android.vending"
         launcher:className="com.android.vending.AssetBrowserActivity"
         launcher:screen="2"
-        launcher:x="3"
-        launcher:y="2" />
+        launcher:x="2"
+        launcher:y="3" />
 
     <!--  Right screen [3] -->
 
